--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
+  "name": "queue",
+  "version": "0.0.0",
   "private": true,
   "testling": {
-    "scripts": ["tests/*.js"],
+    "scripts": ["tests/test.js"],
     "browsers": {
       "ie": [8, 9],
       "ff": [12, 13],
