--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "testling": {
-    "files": "tests/test.js",
+    "files": "test.js",
     "browsers": {
       "ie": [8, 9],
       "ff": [12, 13],
