--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "testling": {
-    "files": "test.js",
+    "scripts": "test.js",
     "browsers": {
       "iexplore": ["9.0"]
     }
