--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "queue",
   "version": "0.0.0",
   "testling": {
-    "scripts": "test.js",
+    "files": "test.js",
     "browsers": {
       "iexplore": ["9.0"]
     }
