--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "testling": {
     "files": "test.js",
     "browsers": {
-      "iexplore": ["9.0"]
+      "iexplore": ["0.8", "9.0"],
+      "chrome": ["20.0"],
+      "firefox": ["13.0"],
+      "safari": ["5.1"],
+      "opera": ["12.0"]
     }
   }
 }
