--- a/package.json
+++ b/package.json
@@ -4,11 +4,24 @@
   "testling": {
     "files": "test.js",
     "browsers": {
-      "iexplore": ["8.0", "9.0"],
-      "chrome": ["20.0"],
-      "firefox": ["13.0"],
-      "safari": ["5.1"],
-      "opera": ["12.0"]
+      "iexplore": [
+        "8.0",
+        "9.0"
+      ],
+      "chrome": [
+        "20.0"
+      ],
+      "firefox": [
+        "13.0"
+      ],
+      "safari": [
+        "5.1"
+      ],
+      "opera": [
+        "12.0"
+      ]
     }
-  }
+  },
+  "author": "ForbesLindesay",
+  "license": "MIT"
 }
