add repository field to readme

--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     }
   },
   "author": "ForbesLindesay",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ForbesLindesay/queue.git"
+  }
 }
